syntax = "proto3";
package sac.v1;
option go_package = "g.echo.tech/dev/sac/gen/sac/v1;sacv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "sac/v1/common.proto";

message SkillParameter {
  string name = 1;
  string label = 2;
  string type = 3;
  bool required = 4;
  string default_value = 5;
  repeated string options = 6;
}

message Skill {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string icon = 4;
  string category = 5;
  string prompt = 6;
  string command_name = 7;
  repeated SkillParameter parameters = 8;
  bool is_official = 9;
  int64 created_by = 10;
  bool is_public = 11;
  optional int64 forked_from = 12;
  int32 version = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
  UserBrief creator = 16;
}

message CreateSkillRequest {
  string name = 1;
  string description = 2;
  string icon = 3;
  string category = 4;
  string prompt = 5;
  string command_name = 6;
  repeated SkillParameter parameters = 7;
  bool is_public = 8;
}

message UpdateSkillRequest {
  optional string name = 1;
  optional string description = 2;
  optional string icon = 3;
  optional string category = 4;
  optional string prompt = 5;
  optional string command_name = 6;
  repeated SkillParameter parameters = 7;
  optional bool is_public = 8;
}

message SkillListResponse {
  repeated Skill skills = 1;
}

message GetSkillRequest {
  int64 id = 1;
}

message UpdateSkillByIdRequest {
  int64 id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string icon = 4;
  optional string category = 5;
  optional string prompt = 6;
  optional string command_name = 7;
  repeated SkillParameter parameters = 8;
  optional bool is_public = 9;
}

service SkillService {
  rpc ListSkills(Empty) returns (SkillListResponse) {
    option (google.api.http) = { get: "/api/skills" };
  }
  rpc GetSkill(GetSkillRequest) returns (Skill) {
    option (google.api.http) = { get: "/api/skills/{id}" };
  }
  rpc CreateSkill(CreateSkillRequest) returns (Skill) {
    option (google.api.http) = { post: "/api/skills", body: "*" };
  }
  rpc UpdateSkill(UpdateSkillByIdRequest) returns (Skill) {
    option (google.api.http) = { put: "/api/skills/{id}", body: "*" };
  }
  rpc DeleteSkill(GetSkillRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/skills/{id}" };
  }
  rpc ForkSkill(GetSkillRequest) returns (Skill) {
    option (google.api.http) = { post: "/api/skills/{id}/fork" };
  }
  rpc ListPublicSkills(Empty) returns (SkillListResponse) {
    option (google.api.http) = { get: "/api/skills/public" };
  }
}
